# ALGOL

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  benchmark.cpp  collatz_seq.cpp  collatz_seq_2.cpp  kth-largest.cpp  linear_search.cpp  project_euler_002.cpp  stack.cpp
examples/recursion/: factorial.cpp  max.cpp  prod_first_n.cpp  tower_of_hanoi.cpp
examples/shuffle/: fisher_yates.cpp  sattolo_cycle.cpp
examples/sort/: bogo_sort.cpp  bubble_sort.cpp  insertion_sort.cpp  quadratic_sort_comparison.cpp  selection_sort.cpp  shell_sort.cpp
examples/stack/: array_reverse.cpp  balanced_delimitiers.cpp  constexpr.cpp  evaluate_postfix.cpp  postfix_to_prefix.cpp  prefix_to_postfix.cpp  sort.cpp
examples/utility/: utility.hpp
include/algol/: utility.hpp
include/algol/algorithms/: algorithm.hpp
include/algol/algorithms/recursion/: factorial.hpp  permutation.hpp
include/algol/algorithms/shuffle/: fisher_yates.hpp  sattolo_cycle.hpp
include/algol/algorithms/sort/: bogo_sort.hpp  bubble_sort.hpp  insertion_sort.hpp  selection_sort.hpp  shell_sort.hpp
include/algol/algorithms/stack/: sort.hpp
include/algol/ds/array/: array.hpp
include/algol/ds/list/: list.hpp
include/algol/ds/queue/: concepts.hpp  fixed_queue.hpp  linked_queue.hpp  queue.hpp
include/algol/ds/stack/: array_stack.hpp  concepts.hpp  fixed_stack.hpp  linked_stack.hpp  stack.hpp
include/algol/eval/: eval.hpp  eval_tokenizer.hpp
include/algol/func/: function.hpp
include/algol/integer/: integer_interval.hpp  integer_interval_range.hpp
include/algol/io/: manip.hpp  pprint.hpp
include/algol/math/: math.hpp
include/algol/perf/: benchmark.hpp  duration.hpp  operation_counter.hpp  stopwatch.hpp
include/algol/result/: result.hpp  to.hpp
include/algol/sequence/: sequence.hpp
include/algol/sequence/generator/: arithmetic_prograssion_generator.hpp  arithmetic_progression_generator.hpp  ciura_gap_sequence_generator.hpp  collatz_generator.hpp  factorial_generator.hpp  fibonacci_generator.hpp  geometric_progression_generator.hpp  halving_generator.hpp  hibbard_gap_sequence_generator.hpp  iota_generator.hpp  sedgewick_gap_sequence_generator.hpp
include/algol/stream/: istream_range.hpp  lines_range.hpp
lib/constexpr/src/include/: cx_pcg32.h
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  algorithm_test.cpp  arithmetic_progession_generator_test.cpp  arithmetic_progression_generator_test.cpp  array_stack_test.cpp  array_test.cpp  collatz_generator_test.cpp  factorial_generator_test.cpp  fibonacci_generator_test.cpp  fixed_stack_test.cpp  function_test.cpp  geometric_progression_generator_test.cpp  integer_interval_range_test.cpp  integer_interval_test.cpp  iota_generator_test.cpp  istream_range_test.cpp  lines_range_test.cpp  linked_stack_test.cpp  math_test.cpp  operation_counter_test.cpp  permutation_test.cpp  pprint_test.cpp  result_test.cpp  sequence_test.cpp  stopwatch_test.cpp  to_test.cpp
tests/integer_tests/: CMakeLists.txt  integer_interval_range_test.cpp  integer_interval_test.cpp
tests/perf_tests/: CMakeLists.txt  operation_counter_test.cpp  stopwatch_test.cpp
tests/queue_tests/: CMakeLists.txt  fixed_queue_test.cpp  linked_queue_test.cpp
tests/result_tests/: CMakeLists.txt  result_test.cpp  to_test.cpp
tests/sequence_tests/: CMakeLists.txt  arithmetic_progression_generator_test.cpp  ciura_gap_sequence_generator_test.cpp  fibonacci_generator_test.cpp  halving_generator_test.cpp  hibbard_gap_sequence_generator_test.cpp  iota_generator_test.cpp  sedgewick_gap_sequence_generator_test.cpp  sequence_test.cpp
tests/sort_tests/: CMakeLists.txt  bogo_sort_test.cpp  bubble_sort_test.cpp  insertion_sort_test.cpp  selection_sort_test.cpp  shell_sort_test.cpp
tests/stack_tests/: CMakeLists.txt  array_stack_test.cpp  fixed_stack_test.cpp  linked_stack_test.cpp
tests/stream_tests/: CMakeLists.txt  istream_range_test.cpp  lines_range_test.cpp
